--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,37 @@
 services:
-  stats-server:
-    ports:
-      - "9090:9090"
+
 
   stats-db:
     image: postgres:16.1
+    container_name: postgres-ewm-stats-db
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=statsdb
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=123456
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -u $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
-  ewm-service:
+
+  stats-server:
+    ports:
+      - "9090:9090"
+    build: stats-server
+    image: stats-server
+    container_name: stats-server
+    depends_on:
+      - stats-db
+
+
+  main-service:
     ports:
       - "8080:8080"
-
-  ewm-db:
-    image: postgres:16.1
+    build: main-service
+    image: main-service
+    container_name: main-service
+    depends_on:
+      - stats-server
