--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<name>Explore With Me</name>
 	<modules>
 		<module>main-service</module>
-		<module>stats</module>
+		<module>stats-server</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
