--- a/stats-server/stats-service/pom.xml
+++ b/stats-server/stats-service/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>stats</artifactId>
+        <artifactId>stats-server</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stats-server</artifactId>
+    <artifactId>stats-service</artifactId>
     <packaging>jar</packaging>
 
     <name>stats-server</name>
