--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-
+  
 
   stats-db:
     image: postgres:16.1
@@ -27,11 +27,11 @@ services:
       - stats-db
 
 
-  main-service:
+  ewm-service:
     ports:
       - "8080:8080"
-    build: main-service
-    image: main-service
-    container_name: main-service
+    build: ewm-service
+    image: ewm-service
+    container_name: ewm-service
     depends_on:
       - stats-server
