--- a/stats-server/stats-service/pom.xml
+++ b/stats-server/stats-service/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>stats-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>stats-server</name>
+    <name>stats-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
