--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<!-- Никаких зависимостей здесь не должно быть -->
+
 	<properties>
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
