--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,20 @@ services:
       - SPRING_DATASOURCE_USERNAME=dbuser
       - SPRING_DATASOURCE_PASSWORD=123456
 
+  ewm-db:
+    image: postgres:16.1
+    container_name: postgres-ewm-main-db
+    ports:
+      - "5434:5432"  # Внутри 5433, снаружи 5434
+    environment:
+      - POSTGRES_DB=ewmdb
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=123456
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -u $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
   ewm-service:
     ports:
@@ -39,3 +53,9 @@ services:
     container_name: ewm-service
     depends_on:
       - stats-server
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmdb  # Внутри сети используем 5433
+      - SPRING_DATASOURCE_USERNAME=dbuser
+      - SPRING_DATASOURCE_PASSWORD=123456
+      - STATSSERVER_URL=http://stats-server:9090
