--- a/ewm-service/src/main/resources/application-local.yaml
+++ b/ewm-service/src/main/resources/application-local.yaml
@@ -1,2 +1,14 @@
 server:
   port: 8080
+
+spring:
+  sql:
+    init:
+      mode: always
+  datasource:
+    url: jdbc:h2:mem:ewm
+    driver-class-name: org.h2.Driver
+    username: ewm
+    password: ewm
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
